Canvas playground update - add gravity option and gravity animations.

--- a/canvas-playground.html
+++ b/canvas-playground.html
@@ -3,11 +3,17 @@
         <h2>
             Canvas control
             <div class="top-settings">
-                <div class="top-setting-item">
+                <!-- <div class="top-setting-item">
                     <label for="autoClear">
                         Autoclear
                     </label>
                     <input id="autoClear" v-model="autoClear" type="checkbox" />
+                </div> -->
+                <div class="top-setting-item">
+                    <label for="gravity">
+                        gravity
+                    </label>
+                    <input id="gravity" v-model="gravity" type="checkbox" />
                 </div>
                 <div class="top-setting-item">
                     <label for="autoStrokeWidth">
